Start work on adding security checks in API function
