# payup-tm/app_api/routes/index.js
@@ -50,9 +50,8 @@ router.delete('/users/:idUser/contacts/:idContact', authentication, ctrlContacts
 
 
 // Controllers for authentication
-router.post('/users', ctrlAuthentication.authSignUp);
-router.post('/users/login', ctrlAuthentication.authLogIn);
-
+router.post('/users', ctrlAuthentication.authSignUp);                                                       // TESTED (20.12.2018)
+router.post('/users/login', ctrlAuthentication.authLogIn);                                                  // TESTED (20.12.2018)
 
 // Expose router as module.
 module.exports = router;
